--- a/.github/workflows/oncheckout.yml
+++ b/.github/workflows/oncheckout.yml
@@ -25,7 +25,7 @@ jobs:
         run: 'echo ${{ secrets.DEVHUB_TOKEN }} > token.txt'
 
       - name: Install Salesforce DX CLI
-        run:
+        run: |
           wget https://developer.salesforce.com/media/salesforce-cli/sfdx-linux-amd64.tar.xz
           mkdir cli
           tar xJf sfdx-linux-amd64.tar.xz -C sfdx-cli --strip-components 1
