--- a/.github/workflows/oncheckout.yml
+++ b/.github/workflows/oncheckout.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Install Salesforce DX CLI
         run: |
           wget https://developer.salesforce.com/media/salesforce-cli/sfdx-linux-amd64.tar.xz
-          mkdir cli
+          mkdir sfdx-cli
           tar xJf sfdx-linux-amd64.tar.xz -C sfdx-cli --strip-components 1
           ./sfdx-cli/install
       
