--- a/.github/workflows/prepdevenv.yml
+++ b/.github/workflows/prepdevenv.yml
@@ -15,6 +15,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - run: |
-      echo Hello ${{ github.event.inputs.name }}
-      echo in ${{ github.event.inputs.home }}!
+        echo "Hello ${{ github.event.inputs.name }}!"
+        echo "- in ${{ github.event.inputs.home }}!"
       
