--- a/.github/workflows/prepdevenv.yml
+++ b/.github/workflows/prepdevenv.yml
@@ -36,7 +36,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: print sratch org def
-      run: 'echo aitcommercial/sfdx-project.json'
+      run: 'cat aitcommercial/sfdx-project.json'
     
     
       
