--- a/.github/workflows/prepdevenv.yml
+++ b/.github/workflows/prepdevenv.yml
@@ -18,6 +18,7 @@ jobs:
       run: |
         echo "Hello ${{ github.event.inputs.name }}!"
         echo "- in ${{ github.event.inputs.home }}!"
+        echo "Current user ${{ github.event.schedule.user.login }}"
 
     - name: Install Salesforce DX CLI
       run: |
