--- a/.github/workflows/prepdevenv.yml
+++ b/.github/workflows/prepdevenv.yml
@@ -18,7 +18,7 @@ jobs:
       run: |
         echo "Hello ${{ github.event.inputs.name }}!"
         echo "- in ${{ github.event.inputs.home }}!"
-        echo "Current user $GITHUB_CONTEXT"
+        echo "Current user ${{github.actor}}"
 
     - name: Install Salesforce DX CLI
       run: |
